# hevy-program-extension

./: .gitignore  DEVELOPMENT.md  README.md  index.html  package-lock.json  package.json
.notes/: get-hevy-swagger-docs  hevy-openapi.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_zoom_level.sql  003_global_tms_and_increments.sql  004_sync_enhancements.sql  005_mesocycle_mirror.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: api_key.rs  hevy_api.rs  mod.rs  program.rs  settings.rs  sync.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/hevy/: client.rs
src-tauri/src/models/: exercise.rs  mod.rs  program.rs  settings.rs  sync_metadata.rs
src-tauri/src/utils/: conversions.rs
src/components/grid/: ExerciseNameEditor.tsx  ProgramGrid.tsx  SetsCellEditor.tsx  gridModel.ts
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/setup/: ApiKeyPrompt.tsx
src/components/sync/: ImportModal.tsx  PullModal.tsx  SyncModal.tsx
src/components/ui/: ContextMenu.tsx
src/hooks/: useAutoSave.ts  useContextMenu.ts
src/lib/: constants.ts  conversions.ts  equipmentGuesser.ts  formulas.ts  tauri.ts  weightResolver.ts
src/pages/: HomePage.tsx  ProgramPage.tsx  SettingsPage.tsx  TrainingMaxPage.tsx
src/stores/: exerciseStore.ts  programStore.ts  settingsStore.ts
src/styles/: global.css
src/types/: exercise.ts  index.ts  program.ts  settings.ts
